--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Bishojo</string>
     <string name="welcome">Welcome to Bishojo!</string>
     <string name="promotion1">Enjoy an infinite stream of AI generated Anime pictures!</string>
+    <string name="loading">Loading ...</string>
 </resources>
